--- a/basicd.ipynb
+++ b/basicd.ipynb
@@ -291,6 +291,211 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "## operators\n",
+    "arithmetic + - * / % // **\n",
+    "assignment = += -= *= /= and so on \n",
+    "comparison\n",
+    "logical operators \n",
+    "relationship (in)\n",
+    "bitwise\n",
+    "identity (is)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = x**2 + y**2 % 10 - 5 * 2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eq= 120\n",
+    "x += 5 # update x by adding 5 \n",
+    "x *= 10 # update x by multiplying by 10\n",
+    "x /= 2 # update x by dividing by 2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(x > y) # greater than \n",
+    "print(x > y) # less than \n",
+    "print(x == y) # equal to \n",
+    "print(x != y) # not equal to \n",
+    "print(x <= y) # less than or equal to \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x + 10 > y - 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x > y and x < 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x > y and x > 100  # this will not be displayed \n",
+    "x > 15  or y > 10 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits = ['apple', 'cherry', 'date','elderberry']\n",
+    "print('cherry' in fruits)\n",
+    "print('cherry' in fruits)\n",
+    "print('blueberry' in fruits)\n",
+    "print('apple' in fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is not the best concept \n",
+    "f= fruits # f is a reference "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# typecasting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x= 10 \n",
+    "xf = float(x)\n",
+    "xs = str(x)\n",
+    "print(x,xf)\n",
+    "print(type(x), type(xf))\n",
+    "# checking if x is an integer \n",
+    "print(isinstance(x, int))\n",
+    "print(isinstance(xf, int))\n",
+    "print(isinstance(x, str))\n",
+    "print(isinstance(xs,(int,float)))\n",
+    "print(isinstance(x,(int,float)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '20a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m20a\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '20a'"
+     ]
+    }
+   ],
+   "source": [
+    "int('20a') # this will not work "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord('a') # returns the unicode value of a character"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "㬄\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chr(15108)) # returns the character of a unicode value \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= int(input('enter a number'))\n",
+    "b= int(input('enter another number'))\n",
+    "print(a+b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
