--- a/basicd.ipynb
+++ b/basicd.ipynb
@@ -397,9 +397,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 10.0\n",
+      "<class 'int'> <class 'float'>\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "x= 10 \n",
     "xf = float(x)\n",
