--- a/flow.ipynb
+++ b/flow.ipynb
@@ -515,6 +515,231 @@
     "for i in range(10,0,-1):\n",
     "    print(i)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6-5-24\n",
+    "- nested loop\n",
+    "- break and continue\n",
+    "- for-else "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,11):\n",
+    "    for j in range(1,4):\n",
+    "        print(j)\n",
+    "    print()    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 | john | 25 | \n",
+      "2 | jane | 22 | \n",
+      "3 | doe | 30 | engineer | \n"
+     ]
+    }
+   ],
+   "source": [
+    "cdata = [\n",
+    "    [1, 'john', 25],\n",
+    "    [2, 'jane', 22],\n",
+    "    [3, 'doe', 30, 'engineer']\n",
+    "]\n",
+    "\n",
+    "for row in cdata:\n",
+    "    for item in row:\n",
+    "        print(item, end=' | ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 45, 67] [23, 45, 67] [34, 56, 78] \n",
+      "[12, 45, 67] [23, 45, 67] [34, 56, 78] \n",
+      "[12, 45, 67] [23, 45, 67] [34, 56, 78] \n"
+     ]
+    }
+   ],
+   "source": [
+    "more_data =[\n",
+    "    [[12,45,67], [23,45,67], [34,56,78]],\n",
+    "]\n",
+    "\n",
+    "for row in more_data:\n",
+    "    for item in row:\n",
+    "        for item in row:\n",
+    "            print(item, end=' ')\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "loop executed\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=[1,2,3,4,5,-1,6,7,8,9,10]\n",
+    "for i in x:\n",
+    "    if i < 0:\n",
+    "        break\n",
+    "    print(i)\n",
+    "print('loop executed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 6 8 9 11 13 14 15 \n",
+      "alternate way\n",
+      "1 2 3 6 8 9 11 13 14 15 "
+     ]
+    }
+   ],
+   "source": [
+    "data_with_crap = [1,2,3,'4','5', 6,'7',8,9,'10',11,'12',13,14,15]\n",
+    "for i in data_with_crap:\n",
+    "    if isinstance(i, str):\n",
+    "        continue \n",
+    "    print(i, end=' ')\n",
+    "\n",
+    "\n",
+    "##########alternative##########\n",
+    "print('\\nalternate way')\n",
+    "for i in data_with_crap:\n",
+    "    if isinstance(i, int):\n",
+    "        print(i, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "loop completed all steps\n"
+     ]
+    }
+   ],
+   "source": [
+    "# adding a check for loop completion\n",
+    "data = [1,2,3,4,5,6,7,8,9,10]\n",
+    "stop_val = int(input('enter a number to stop at:'))\n",
+    "counter = 0\n",
+    "for i in data: \n",
+    "    if stop_val == i:\n",
+    "        print(f\"loop stopped at{i}\")\n",
+    "        break\n",
+    "    print(i)\n",
+    "else:\n",
+    "    print(\"loop completed all steps\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
