--- a/strings.ipynb
+++ b/strings.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -91,6 +91,475 @@
     "print(v[-12]) # first index \n",
     "print('second last', v[-2])\n",
     "print('sixth last', v[-6])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "slicing in python\n",
+    ".....\n",
+    "x[start : stop]\n",
+    "....."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "cyclop\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= 'Encyclopedia'\n",
+    "print(len(a))\n",
+    "print(a[2:8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vijay\n",
+      "deenanath\n",
+      "chauhan\n"
+     ]
+    }
+   ],
+   "source": [
+    "name= 'Vijay deenanath chauhan'\n",
+    "firstname = name[0:5]\n",
+    "print(firstname)\n",
+    "middlename= name[6:15]\n",
+    "print(middlename)\n",
+    "lastname= name[16:23]\n",
+    "print(lastname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Vijay'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name[:5] # first 5 characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2458341728.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[23], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    name= [6:] # from 6th idx to end\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "name= [6:] # from 6th idx to end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name= [16:] # from 16th idx to end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg = \"Journey Before Destination\"\n",
+    "msg=[-11:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'eternia'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg = 'once upon a time, there was a place called eternia'\n",
+    "msg[-7:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "800999\n"
+     ]
+    }
+   ],
+   "source": [
+    "amt= '$800999'\n",
+    "amt= int(amt[1:])\n",
+    "print(amt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'oc pnatm,teewsapaecle tri'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg[::2] # every 2nd character(even index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'neuo  ie hr a  lc aldeena'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg[1::2] # every 2nd character (odd index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ainrete dellac ecalp a saw ereht ,emit a nopu ecno'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# most op thing in slicing \n",
+    "msg[::-1] # reverse the string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ainre'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg[::-1][:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'htananeed'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name[6:15][::-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "string methods\n",
+    "- formatting \n",
+    "- validation \n",
+    "- find & replace \n",
+    "- etc "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'capitalise'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m quote_upper \u001b[38;5;241m=\u001b[39m quote\u001b[38;5;241m.\u001b[39mupper()\n\u001b[0;32m      3\u001b[0m quote_lower \u001b[38;5;241m=\u001b[39m quote\u001b[38;5;241m.\u001b[39mlower()\n\u001b[1;32m----> 4\u001b[0m quote_capt \u001b[38;5;241m=\u001b[39m quote\u001b[38;5;241m.\u001b[39mcapitalise()\n\u001b[0;32m      5\u001b[0m quote_swapcase \u001b[38;5;241m=\u001b[39m quote\u001b[38;5;241m.\u001b[39mswapcase()\n\u001b[0;32m      6\u001b[0m quote_title \u001b[38;5;241m=\u001b[39m quote\u001b[38;5;241m.\u001b[39mtitle()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'capitalise'"
+     ]
+    }
+   ],
+   "source": [
+    "quote = \"All the glitter is not Gold💛\"\n",
+    "quote_upper = quote.upper()\n",
+    "quote_lower = quote.lower()\n",
+    "quote_capt = quote.capitalise()\n",
+    "quote_swapcase = quote.swapcase()\n",
+    "quote_title = quote.title()\n",
+    "print(quote)\n",
+    "print(quote_upper)\n",
+    "quote_lower = quote.lower()\n",
+    "print(quote_lower)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quote.rjust(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quote.center(50,'-')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name.isnumeric()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what kind of name is this\n"
+     ]
+    }
+   ],
+   "source": [
+    "fname= input(\"enter ur name:(dont use numbers)\")\n",
+    "if fname.isalpha():\n",
+    "    print(\"valid name, very good\")\n",
+    "else:\n",
+    "    print(\"what kind of name is this\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find and index methods for searching strings \n",
+    "msg.find('place') # returns the index of the first occurence of the substring "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "-1\n",
+      "-1\n",
+      "12\n",
+      "73\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = 'Roshar is a place of magic and wonder, place of knights and kings. Its a place of highstorms and shardblades'''\n",
+    "print(data.find('place'))\n",
+    "print(data.find('Place', 13)) # 13 is the starting index for searching\n",
+    "print(data.find('Place')) # -1 means not found \n",
+    "print(data.lower().find('place')) # -1 means not found \n",
+    "# reverse find \n",
+    "print(data.rfind('place')) # returns the index of the last occurence of the substring "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# replace method \n",
+    "data.replace('place', )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Rashar is a place af magic and wander, place af knights and kings. Its a place af highstarms and shardblades'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.replace('o','a')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Roshbr es b plbce of mbgec bnd wonder, plbce of cneghts bnd cengs. Its b plbce of heghstorms bnd shbrdblbdes'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.replace('i','e').replace('k','c').replace('a','b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Roshar_is_a_place of magic and wonder, place of knights and kings. Its a place of highstorms and shardblades\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.replace(' ','_',3))"
    ]
   }
  ],
