--- a/strings.ipynb
+++ b/strings.ipynb
@@ -170,36 +170,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (2458341728.py, line 1)",
+     "evalue": "invalid syntax (929709485.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[23], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    name= [6:] # from 6th idx to end\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[11], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    name= [6:19] # from 6th idx to end\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "name= [6:] # from 6th idx to end"
+    "name= [6:19] # from 6th idx to end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (885687586.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[7], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    name= [16:] # from 16th idx to end\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "name= [16:] # from 16th idx to end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2825272179.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    msg=[-11:]\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "msg = \"Journey Before Destination\"\n",
     "msg=[-11:]"
@@ -359,18 +377,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'capitalise'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m quote_upper \u001b[38;5;241m=\u001b[39m quote\u001b[38;5;241m.\u001b[39mupper()\n\u001b[0;32m      3\u001b[0m quote_lower \u001b[38;5;241m=\u001b[39m quote\u001b[38;5;241m.\u001b[39mlower()\n\u001b[1;32m----> 4\u001b[0m quote_capt \u001b[38;5;241m=\u001b[39m quote\u001b[38;5;241m.\u001b[39mcapitalise()\n\u001b[0;32m      5\u001b[0m quote_swapcase \u001b[38;5;241m=\u001b[39m quote\u001b[38;5;241m.\u001b[39mswapcase()\n\u001b[0;32m      6\u001b[0m quote_title \u001b[38;5;241m=\u001b[39m quote\u001b[38;5;241m.\u001b[39mtitle()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'capitalise'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All the glitter is not Gold💛\n",
+      "ALL THE GLITTER IS NOT GOLD💛\n",
+      "All the glitter is not gold💛\n",
+      "aLL THE GLITTER IS NOT gOLD💛\n",
+      "All The Glitter Is Not Gold💛\n",
+      "all the glitter is not gold💛\n"
      ]
     }
    ],
@@ -378,47 +397,73 @@
     "quote = \"All the glitter is not Gold💛\"\n",
     "quote_upper = quote.upper()\n",
     "quote_lower = quote.lower()\n",
-    "quote_capt = quote.capitalise()\n",
+    "quote_capitalize = quote.capitalize()\n",
     "quote_swapcase = quote.swapcase()\n",
     "quote_title = quote.title()\n",
     "print(quote)\n",
     "print(quote_upper)\n",
+    "print(quote_capitalize)\n",
+    "print(quote_swapcase)\n",
+    "print(quote_title)\n",
     "quote_lower = quote.lower()\n",
     "print(quote_lower)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'                      All the glitter is not Gold💛'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "quote.rjust(50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'-----------All the glitter is not Gold💛-----------'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "quote.center(50,'-')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m name\u001b[38;5;241m.\u001b[39misnumeric()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'name' is not defined"
+     ]
     }
    ],
    "source": [
@@ -449,18 +494,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'msg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# find and index methods for searching strings \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m msg\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplace\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'msg' is not defined"
+     ]
     }
    ],
    "source": [
@@ -497,9 +543,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# replace method \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m data\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplace\u001b[39m\u001b[38;5;124m'\u001b[39m, )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# replace method \n",
     "data.replace('place', )"
@@ -560,6 +618,405 @@
    ],
    "source": [
     "print(data.replace(' ','_',3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "split and join "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n",
+      "apple banana cherry durian\n",
+      "['apple', 'banana', 'cherry', 'durian']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = input(\"enter names of fruits\")\n",
+    "print(len(fruits))\n",
+    "print(fruits)\n",
+    "fruitlist = fruits.split()\n",
+    "print(fruitlist)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['this', 'is', 'some', 'message']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'this is some message'.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['life before death',\n",
+       " ' strength before weakness',\n",
+       " ' journey before destination']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quote = \"life before death, strength before weakness, journey before destination\"\n",
+    "quote.split(',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['life ', ' death, strength ', ' weakness, journey ', ' destination']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quote.split('before')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Johnny johnny yes papa',\n",
+       " 'eating sugar? no papa',\n",
+       " 'telling lies? no papa',\n",
+       " 'open your mouth, ha ha ha']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poem = '''Johnny johnny yes papa\n",
+    "eating sugar? no papa\n",
+    "telling lies? no papa\n",
+    "open your mouth, ha ha ha'''\n",
+    "poem.splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:/users/zaid/desktop/file.txt'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "addr = ['c:','users','zaid','desktop','file.txt']\n",
+    "\"/\".join(addr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124menter your name, month and year of birth seperated by coma:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m words \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(words)\n\u001b[0;32m      4\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(words)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"enter your name, month and year of birth seperated by coma:\")\n",
+    "words = data.split(',')\n",
+    "print(words)\n",
+    "name = \"_\".join(words)\n",
+    "print(f'img_{name}.jpg')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your name is vanshika\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('enter your name')\n",
+    "print('your name is', name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "white purple black blue\n"
+     ]
+    }
+   ],
+   "source": [
+    "colours = input('white, purple, black, blue')\n",
+    "print(len(colours))\n",
+    "print(colours)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      " great\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'python is great'\n",
+    "print(len(a))\n",
+    "print(a[9:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dlrow olleh\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'hello world'\n",
+    "print(a[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before occurs 3 times in the quote\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count method\n",
+    "n= quote.count('before')\n",
+    "print(f'before occurs {n} times in the quote')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quote.count('e')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "starts with \n",
+    "end with "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Mr Bean'.startswith('Mr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Mr Bean'.startswith('Ms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a meeting of gentlemen only\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('enter ur name')\n",
+    "if name.startswith('Mr'):\n",
+    "    print('Hello Sir')\n",
+    "else:\n",
+    "    print('This is a meeting of gentlemen only')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = input(\"enter filename\")\n",
+    "print(f\"filename:{filename}\")\n",
+    "if filename.endswith('.csv'):\n",
+    "    print(\"dataset file\")\n",
+    "elif filename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'stip'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# strip \u001b[39;00m\n\u001b[0;32m      2\u001b[0m movie \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124menter movie name:\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m clean_movie \u001b[38;5;241m=\u001b[39m movie\u001b[38;5;241m.\u001b[39mstip()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(movie)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(clean_movie)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'stip'"
+     ]
+    }
+   ],
+   "source": [
+    "# strip \n",
+    "movie = input('enter movie name:')\n",
+    "clean_movie = movie.stip()\n",
+    "print(movie)\n",
+    "print(clean_movie)\n",
+    "print(f'movie: {len(movie)}')\n",
+    "print(f'clean name: {len(clean_movie)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'hello '"
    ]
   }
  ],
